0.1 snapshot update